--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3>Where A Traditional Past Meets A Modern Future.</h3>
 
     <div id="content">
-      <img src="transportation/transit.jpg">
+      <img src="images/transportation/transit.jpg">
       <h3>Travel</h3>
       <br>
       <p>Once a mudbrick waystation along desert trading routes...</p>
